# STMJoystickAnalyzer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  tft_display.ioc
Core/Inc/: alt_main.h  lcd.h  lvgl_adapter.h  main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Core/Src/: adc.c  alt_main.cpp  gpio.c  lcd.cpp  lvgl_adapter.cpp  main.c  stm32l4xx_it.c  usart.c
Core/Src/ui/: screens.c  screens.h
Lib/: lv_conf.h
Lib/lvgl/: lv_conf.h  lvglConfig.cmake
Lib/uart/: CMakeLists.txt  staticVector.h  uartRx.cpp  uartRx.h  uartTx.cpp  uartTx.h
